Update manifest format

--- a/webextensions/manifest.json
+++ b/webextensions/manifest.json
@@ -30,7 +30,7 @@
   },
   "options_ui": {
     "page": "options/options.html",
-    "chrome_style": true
+    "browser_style": true
   },
   "web_accessible_resources": [
     "resources/group-tab.html*"
