Add context menu items and configuration UI

--- a/webextensions/manifest.json
+++ b/webextensions/manifest.json
@@ -8,7 +8,8 @@
     "activeTab",
     "sessions",
     "storage",
-    "tabs"
+    "tabs",
+    "contextMenus"
   ],
   "icons": {
     "64": "resources/icon64.png",
