--- a/webextensions/manifest.json
+++ b/webextensions/manifest.json
@@ -16,6 +16,9 @@
     "tabs"
   ],
   "icons": {
+    "16": "resources/16x16-light.svg",
+    "20": "resources/20x20-light.svg",
+    "24": "resources/24x24-light.svg",
     "64": "resources/icon64.png",
     "94": "resources/icon94.png"
   },
@@ -24,12 +27,20 @@
   },
   "browser_action": {
     "default_title": "__MSG_sidebarTitle__",
-    "default_icon": "resources/icon64.png",
+    "default_icon": {
+      "16": "resources/16x16-light.svg",
+      "20": "resources/20x20-light.svg",
+      "24": "resources/24x24-light.svg"
+    },
     "browser_style": true
   },
   "sidebar_action": {
     "default_title": "__MSG_sidebarTitle__",
-    "default_icon": "resources/icon64.png",
+    "default_icon": {
+      "16": "resources/16x16-light.svg",
+      "20": "resources/20x20-light.svg",
+      "24": "resources/24x24-light.svg"
+    },
     "default_panel": "sidebar/sidebar.html",
     "browser_style": true
   },
