Make "format" make target rerunnable

--- a/webextensions/Makefile
+++ b/webextensions/Makefile
@@ -1,7 +1,7 @@
 NPM_MOD_DIR := $(CURDIR)/node_modules
 NPM_BIN_DIR := $(NPM_MOD_DIR)/.bin
 
-.PHONY: xpi install_dependency lint
+.PHONY: xpi install_dependency lint format
 
 all: xpi
 
