--- a/webextensions/manifest.json
+++ b/webextensions/manifest.json
@@ -50,6 +50,16 @@
       "description": "__MSG_sidebarToggleDescription__"
     }
   },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "all_frames": true,
+      "run_at": "document_end",
+      "js": [
+        "common/handle-accel-key.js"
+      ]
+    }
+  ],
   "options_ui": {
     "page": "options/options.html",
     "browser_style": true
