Apply browser theme color #1526

--- a/webextensions/manifest.json
+++ b/webextensions/manifest.json
@@ -13,7 +13,8 @@
     "notifications",
     "sessions",
     "storage",
-    "tabs"
+    "tabs",
+    "theme"
   ],
   "icons": {
     "16": "resources/16x16-light.svg",
