--- a/webextensions/Makefile
+++ b/webextensions/Makefile
@@ -14,14 +14,18 @@ lint:
 format:
 	$(NPM_BIN_DIR)/eslint . --ext=.js –report-unused-disable-directives --fix
 
-xpi: lint ../extlib/webextensions-lib-tab-favicon-helper/TabFavIconHelper.js ../extlib/webextensions-lib-configs/Configs.js ../extlib/webextensions-lib-options/Options.js ../extlib/webextensions-lib-l10n/l10n.js
+xpi: lint ../extlib/webextensions-lib-tab-id-fixer/TabIdFixer.js ../extlib/webextensions-lib-tab-favicon-helper/TabFavIconHelper.js ../extlib/webextensions-lib-configs/Configs.js ../extlib/webextensions-lib-options/Options.js ../extlib/webextensions-lib-l10n/l10n.js
 	cd .. && git submodule update
+	cp ../extlib/webextensions-lib-tab-id-fixer/TabIdFixer.js common/
 	cp ../extlib/webextensions-lib-tab-favicon-helper/TabFavIconHelper.js common/
 	cp ../extlib/webextensions-lib-configs/Configs.js common/
 	cp ../extlib/webextensions-lib-options/Options.js options/
 	cp ../extlib/webextensions-lib-l10n/l10n.js common/
 	rm -f ./*.xpi
 	zip -r -0 treestyletab-we.xpi manifest.json _locales common options background sidebar resources >/dev/null 2>/dev/null
+
+../extlib/webextensions-lib-tab-id-fixer/TabIdFixer.js:
+	cd .. && git submodule update --init
 
 ../extlib/webextensions-lib-tab-favicon-helper/TabFavIconHelper.js:
 	cd .. && git submodule update --init
