Add "hideTab" to optional permissions

--- a/webextensions/manifest.json
+++ b/webextensions/manifest.json
@@ -17,7 +17,8 @@
   ],
   "optional_permissions": [
     "<all_urls>",
-    "bookmarks"
+    "bookmarks",
+    "tabHide"
   ],
   "icons": {
     "16": "resources/16x16-light.svg",
