Deactivate "hide inactive tabs" feature.
Due to https://github.com/mozilla/addons-linter/issues/1788 we cannot release a version with "tabHide" permission.

--- a/webextensions/manifest.json
+++ b/webextensions/manifest.json
@@ -17,8 +17,7 @@
   ],
   "optional_permissions": [
     "<all_urls>",
-    "bookmarks",
-    "tabHide"
+    "bookmarks"
   ],
   "icons": {
     "16": "resources/16x16-light.svg",
