--- a/webextensions/manifest.json
+++ b/webextensions/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "__MSG_extensionName__",
-  "version": "2.2.9",
+  "version": "2.4.7",
   "author": "YUKI \"Piro\" Hiroshi",
   "description": "__MSG_extensionDescription__",
   "permissions": [
@@ -16,14 +16,15 @@
     "theme"
   ],
   "optional_permissions": [
+    "<all_urls>",
     "bookmarks"
   ],
   "icons": {
     "16": "resources/icon.svg",
     "20": "resources/icon.svg",
     "24": "resources/icon.svg",
-    "64": "resources/icon",
-    "94": "resources/icon"
+    "64": "resources/icon64.png",
+    "94": "resources/icon94.png"
   },
   "background": {
     "page": "background/background.html"
@@ -45,16 +46,6 @@
       "description": "__MSG_sidebarToggleDescription__"
     }
   },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "all_frames": true,
-      "run_at": "document_end",
-      "js": [
-        "common/handle-accel-key.js"
-      ]
-    }
-  ],
   "options_ui": {
     "page": "options/options.html",
     "browser_style": true
