--- a/webextensions/.eslintignore
+++ b/webextensions/.eslintignore
@@ -3,6 +3,8 @@ common/TabIdFixer.js
 common/TabFavIconHelper.js
 common/Configs.js
 common/l10n.js
+common/RichConfirm.js
+common/MenuUI.js
 options/Options.js
 
 # include as a lint target.
