Use library to provide UI for keyboard shortcut customize

--- a/webextensions/Makefile
+++ b/webextensions/Makefile
@@ -14,7 +14,7 @@ lint:
 format:
 	$(NPM_BIN_DIR)/eslint . --ext=.js --report-unused-disable-directives --fix
 
-xpi: lint ../extlib/webextensions-lib-tab-id-fixer/TabIdFixer.js ../extlib/webextensions-lib-tab-favicon-helper/TabFavIconHelper.js ../extlib/webextensions-lib-configs/Configs.js ../extlib/webextensions-lib-options/Options.js ../extlib/webextensions-lib-l10n/l10n.js ../extlib/webextensions-lib-rich-confirm/RichConfirm.js ../extlib/webextensions-lib-menu-ui/MenuUI.js
+xpi: lint ../extlib/webextensions-lib-tab-id-fixer/TabIdFixer.js ../extlib/webextensions-lib-tab-favicon-helper/TabFavIconHelper.js ../extlib/webextensions-lib-configs/Configs.js ../extlib/webextensions-lib-options/Options.js ../extlib/webextensions-lib-l10n/l10n.js ../extlib/webextensions-lib-rich-confirm/RichConfirm.js ../extlib/webextensions-lib-menu-ui/MenuUI.js ../extlib/webextensions-lib-shortcut-customize-ui/ShortcutCustomizeUI.js
 	cd .. && git submodule update
 	cp ../extlib/webextensions-lib-tab-id-fixer/TabIdFixer.js common/
 	cp ../extlib/webextensions-lib-tab-favicon-helper/TabFavIconHelper.js common/
@@ -23,6 +23,7 @@ xpi: lint ../extlib/webextensions-lib-tab-id-fixer/TabIdFixer.js ../extlib/webex
 	cp ../extlib/webextensions-lib-configs/Configs.js common/
 	cp ../extlib/webextensions-lib-options/Options.js options/
 	cp ../extlib/webextensions-lib-l10n/l10n.js common/
+	cp ../extlib/webextensions-lib-shortcut-customize-ui/ShortcutCustomizeUI.js options/
 	rm -f ./*.xpi
 	zip -r -0 treestyletab-we.xpi manifest.json _locales common options background sidebar resources >/dev/null 2>/dev/null
 
@@ -45,5 +46,8 @@ xpi: lint ../extlib/webextensions-lib-tab-id-fixer/TabIdFixer.js ../extlib/webex
 	cd .. && git submodule update --init
 
 ../extlib/webextensions-lib-menu-ui/MenuUI.js:
+	cd .. && git submodule update --init
+
+../extlib/webextensions-lib-shortcut-customize-ui/ShortcutCustomizeUI.js:
 	cd .. && git submodule update --init
 
