--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "extlib/webextensions-lib-menu-ui"]
 	path = extlib/webextensions-lib-menu-ui
 	url = https://github.com/piroor/webextensions-lib-menu-ui.git
+[submodule "extlib/webextensions-lib-shortcut-customize-ui"]
+	path = extlib/webextensions-lib-shortcut-customize-ui
+	url = https://github.com/piroor/webextensions-lib-shortcut-customize-ui.git
