--- a/webextensions/.eslintignore
+++ b/webextensions/.eslintignore
@@ -6,6 +6,7 @@ common/l10n.js
 common/RichConfirm.js
 common/MenuUI.js
 options/Options.js
+options/ShortcutCustomizeUI.js
 
 # include as a lint target.
 !.eslintrc.js
