--- a/webextensions/manifest.json
+++ b/webextensions/manifest.json
@@ -140,21 +140,27 @@
       "description": "__MSG_command_focusNextSilently__"
     },
     "tabbarUp": {
+      "suggested_key": { "default": "Alt+Up" },
       "description": "__MSG_command_tabbarUp__"
     },
     "tabbarPageUp": {
+      "suggested_key": { "default": "Alt+PageUp" },
       "description": "__MSG_command_tabbarPageUp__"
     },
     "tabbarHome": {
+      "suggested_key": { "default": "Alt+Home" },
       "description": "__MSG_command_tabbarHome__"
     },
     "tabbarDown": {
+      "suggested_key": { "default": "Alt+Down" },
       "description": "__MSG_command_tabbarDown__"
     },
     "tabbarPageDown": {
+      "suggested_key": { "default": "Alt+PageDown" },
       "description": "__MSG_command_tabbarPageDown__"
     },
     "tabbarEnd": {
+      "suggested_key": { "default": "Alt+End" },
       "description": "__MSG_command_tabbarEnd__"
     }
   },
