Change default shortcuts for scrolling the sidebar for safety #1783
Alt + something => Alt + Shift + something

--- a/webextensions/manifest.json
+++ b/webextensions/manifest.json
@@ -140,27 +140,27 @@
       "description": "__MSG_command_focusNextSilently__"
     },
     "tabbarUp": {
-      "suggested_key": { "default": "Alt+Up" },
+      "suggested_key": { "default": "Alt+Shift+Up" },
       "description": "__MSG_command_tabbarUp__"
     },
     "tabbarPageUp": {
-      "suggested_key": { "default": "Alt+PageUp" },
+      "suggested_key": { "default": "Alt+Shift+PageUp" },
       "description": "__MSG_command_tabbarPageUp__"
     },
     "tabbarHome": {
-      "suggested_key": { "default": "Alt+Home" },
+      "suggested_key": { "default": "Alt+Shift+Home" },
       "description": "__MSG_command_tabbarHome__"
     },
     "tabbarDown": {
-      "suggested_key": { "default": "Alt+Down" },
+      "suggested_key": { "default": "Alt+Shift+Down" },
       "description": "__MSG_command_tabbarDown__"
     },
     "tabbarPageDown": {
-      "suggested_key": { "default": "Alt+PageDown" },
+      "suggested_key": { "default": "Alt+Shift+PageDown" },
       "description": "__MSG_command_tabbarPageDown__"
     },
     "tabbarEnd": {
-      "suggested_key": { "default": "Alt+End" },
+      "suggested_key": { "default": "Alt+Shift+End" },
       "description": "__MSG_command_tabbarEnd__"
     }
   },
