Add ability to attach new orphan tab to the opener tab when they are same website

--- a/webextensions/manifest.json
+++ b/webextensions/manifest.json
@@ -13,7 +13,8 @@
     "sessions",
     "storage",
     "tabs",
-    "theme"
+    "theme",
+    "webRequest"
   ],
   "optional_permissions": [
     "<all_urls>",
