Detect new indepentent tab opened from same site without any extra permission

--- a/webextensions/manifest.json
+++ b/webextensions/manifest.json
@@ -13,8 +13,7 @@
     "sessions",
     "storage",
     "tabs",
-    "theme",
-    "webRequest"
+    "theme"
   ],
   "optional_permissions": [
     "<all_urls>",
