--- a/webextensions/manifest.json
+++ b/webextensions/manifest.json
@@ -20,9 +20,9 @@
     "bookmarks"
   ],
   "icons": {
-    "16": "resources/16x16-light.svg",
-    "20": "resources/20x20-light.svg",
-    "24": "resources/24x24-light.svg",
+    "16": "resources/16x16.svg",
+    "20": "resources/20x20.svg",
+    "24": "resources/24x24.svg",
     "64": "resources/icon64.png",
     "94": "resources/icon94.png"
   },
@@ -32,9 +32,9 @@
   "browser_action": {
     "default_title": "__MSG_sidebarTitle__",
     "default_icon": {
-      "16": "resources/16x16-light.svg",
-      "20": "resources/20x20-light.svg",
-      "24": "resources/24x24-light.svg"
+      "16": "resources/16x16.svg",
+      "20": "resources/20x20.svg",
+      "24": "resources/24x24.svg"
     },
     "browser_style": true,
     "theme_icons": [
