Load external libraries as ES modules

--- a/webextensions/Makefile
+++ b/webextensions/Makefile
@@ -1,7 +1,7 @@
 NPM_MOD_DIR := $(CURDIR)/node_modules
 NPM_BIN_DIR := $(NPM_MOD_DIR)/.bin
 
-.PHONY: xpi install_dependency lint format
+.PHONY: xpi install_dependency lint format install_extlib
 
 all: xpi
 
@@ -14,18 +14,20 @@ lint:
 format:
 	$(NPM_BIN_DIR)/eslint . --ext=.js --report-unused-disable-directives --fix
 
-xpi: lint ../extlib/webextensions-lib-tab-id-fixer/TabIdFixer.js ../extlib/webextensions-lib-tab-favicon-helper/TabFavIconHelper.js ../extlib/webextensions-lib-configs/Configs.js ../extlib/webextensions-lib-options/Options.js ../extlib/webextensions-lib-l10n/l10n.js ../extlib/webextensions-lib-rich-confirm/RichConfirm.js ../extlib/webextensions-lib-menu-ui/MenuUI.js ../extlib/webextensions-lib-shortcut-customize-ui/ShortcutCustomizeUI.js
-	cd .. && git submodule update
-	cp ../extlib/webextensions-lib-tab-id-fixer/TabIdFixer.js common/
-	cp ../extlib/webextensions-lib-tab-favicon-helper/TabFavIconHelper.js common/
-	cp ../extlib/webextensions-lib-rich-confirm/RichConfirm.js common/
-	cp ../extlib/webextensions-lib-menu-ui/MenuUI.js common/
-	cp ../extlib/webextensions-lib-configs/Configs.js common/
-	cp ../extlib/webextensions-lib-options/Options.js options/
-	cp ../extlib/webextensions-lib-l10n/l10n.js common/
-	cp ../extlib/webextensions-lib-shortcut-customize-ui/ShortcutCustomizeUI.js options/
+xpi: install_extlib lint ../extlib/webextensions-lib-tab-id-fixer/TabIdFixer.js ../extlib/webextensions-lib-tab-favicon-helper/TabFavIconHelper.js ../extlib/webextensions-lib-configs/Configs.js ../extlib/webextensions-lib-options/Options.js ../extlib/webextensions-lib-l10n/l10n.js ../extlib/webextensions-lib-rich-confirm/RichConfirm.js ../extlib/webextensions-lib-menu-ui/MenuUI.js ../extlib/webextensions-lib-shortcut-customize-ui/ShortcutCustomizeUI.js
 	rm -f ./*.xpi
 	zip -r -0 treestyletab-we.xpi manifest.json _locales common options background sidebar resources >/dev/null 2>/dev/null
+
+install_extlib:
+	cd .. && git submodule update
+	cp ../extlib/webextensions-lib-tab-id-fixer/TabIdFixer.js common/; echo 'export default TabIdFixer;' >> common/TabIdFixer.js
+	cp ../extlib/webextensions-lib-tab-favicon-helper/TabFavIconHelper.js common/; echo 'export default TabFavIconHelper;' >> common/TabFavIconHelper.js
+	cp ../extlib/webextensions-lib-rich-confirm/RichConfirm.js common/; echo 'export default RichConfirm;' >> common/RichConfirm.js
+	cp ../extlib/webextensions-lib-menu-ui/MenuUI.js common/; echo 'export default MenuUI;' >> common/MenuUI.js
+	cp ../extlib/webextensions-lib-configs/Configs.js common/; echo 'export default Configs;' >> common/Configs.js
+	cp ../extlib/webextensions-lib-options/Options.js options/; echo 'export default Options;' >> options/Options.js
+	cp ../extlib/webextensions-lib-l10n/l10n.js common/; echo 'export default l10n;' >> common/l10n.js
+	cp ../extlib/webextensions-lib-shortcut-customize-ui/ShortcutCustomizeUI.js options/; echo 'export default ShortcutCustomizeUI;' >> options/ShortcutCustomizeUI.js
 
 ../extlib/webextensions-lib-tab-id-fixer/TabIdFixer.js:
 	cd .. && git submodule update --init
