Put submosules under "submodules" and distribute external libraries under "extlib"

--- a/webextensions/Makefile
+++ b/webextensions/Makefile
@@ -1,7 +1,7 @@
 NPM_MOD_DIR := $(CURDIR)/node_modules
 NPM_BIN_DIR := $(NPM_MOD_DIR)/.bin
 
-EXTERNAL_LIB_DIR := $(CURDIR)/external
+EXTERNAL_LIB_DIR := $(CURDIR)/extlib
 
 .PHONY: xpi install_dependency lint format install_extlib
 
@@ -16,43 +16,43 @@ lint:
 format:
 	$(NPM_BIN_DIR)/eslint . --ext=.js --report-unused-disable-directives --fix
 
-xpi: install_extlib lint ../extlib/webextensions-lib-tab-id-fixer/TabIdFixer.js ../extlib/webextensions-lib-tab-favicon-helper/TabFavIconHelper.js ../extlib/webextensions-lib-configs/Configs.js ../extlib/webextensions-lib-options/Options.js ../extlib/webextensions-lib-l10n/l10n.js ../extlib/webextensions-lib-rich-confirm/RichConfirm.js ../extlib/webextensions-lib-menu-ui/MenuUI.js ../extlib/webextensions-lib-shortcut-customize-ui/ShortcutCustomizeUI.js
+xpi: install_extlib lint ../submodules/webextensions-lib-tab-id-fixer/TabIdFixer.js ../submodules/webextensions-lib-tab-favicon-helper/TabFavIconHelper.js ../submodules/webextensions-lib-configs/Configs.js ../submodules/webextensions-lib-options/Options.js ../submodules/webextensions-lib-l10n/l10n.js ../submodules/webextensions-lib-rich-confirm/RichConfirm.js ../submodules/webextensions-lib-menu-ui/MenuUI.js ../submodules/webextensions-lib-shortcut-customize-ui/ShortcutCustomizeUI.js
 	rm -f ./*.xpi
 	zip -r -0 treestyletab-we.xpi manifest.json _locales common options background sidebar resources >/dev/null 2>/dev/null
 
 install_extlib:
 	cd .. && git submodule update
-	cp ../extlib/webextensions-lib-tab-id-fixer/TabIdFixer.js $(EXTERNAL_LIB_DIR)/; echo 'export default TabIdFixer;' >> $(EXTERNAL_LIB_DIR)/TabIdFixer.js
-	cp ../extlib/webextensions-lib-tab-favicon-helper/TabFavIconHelper.js $(EXTERNAL_LIB_DIR)/; echo 'export default TabFavIconHelper;' >> $(EXTERNAL_LIB_DIR)/TabFavIconHelper.js
-	cp ../extlib/webextensions-lib-rich-confirm/RichConfirm.js $(EXTERNAL_LIB_DIR)/; echo 'export default RichConfirm;' >> $(EXTERNAL_LIB_DIR)/RichConfirm.js
-	cp ../extlib/webextensions-lib-menu-ui/MenuUI.js $(EXTERNAL_LIB_DIR)/; echo 'export default MenuUI;' >> $(EXTERNAL_LIB_DIR)/MenuUI.js
-	cp ../extlib/webextensions-lib-configs/Configs.js $(EXTERNAL_LIB_DIR)/; echo 'export default Configs;' >> $(EXTERNAL_LIB_DIR)/Configs.js
-	cp ../extlib/webextensions-lib-options/Options.js $(EXTERNAL_LIB_DIR)/; echo 'export default Options;' >> $(EXTERNAL_LIB_DIR)/Options.js
-	cp ../extlib/webextensions-lib-l10n/l10n.js $(EXTERNAL_LIB_DIR)/; echo 'export default l10n;' >> $(EXTERNAL_LIB_DIR)/l10n.js
-	cp ../extlib/webextensions-lib-l10n/l10n.js $(EXTERNAL_LIB_DIR)/l10n-classic.js
-	cp ../extlib/webextensions-lib-shortcut-customize-ui/ShortcutCustomizeUI.js $(EXTERNAL_LIB_DIR)/; echo 'export default ShortcutCustomizeUI;' >> $(EXTERNAL_LIB_DIR)/ShortcutCustomizeUI.js
+	cp ../submodules/webextensions-lib-tab-id-fixer/TabIdFixer.js $(EXTERNAL_LIB_DIR)/; echo 'export default TabIdFixer;' >> $(EXTERNAL_LIB_DIR)/TabIdFixer.js
+	cp ../submodules/webextensions-lib-tab-favicon-helper/TabFavIconHelper.js $(EXTERNAL_LIB_DIR)/; echo 'export default TabFavIconHelper;' >> $(EXTERNAL_LIB_DIR)/TabFavIconHelper.js
+	cp ../submodules/webextensions-lib-rich-confirm/RichConfirm.js $(EXTERNAL_LIB_DIR)/; echo 'export default RichConfirm;' >> $(EXTERNAL_LIB_DIR)/RichConfirm.js
+	cp ../submodules/webextensions-lib-menu-ui/MenuUI.js $(EXTERNAL_LIB_DIR)/; echo 'export default MenuUI;' >> $(EXTERNAL_LIB_DIR)/MenuUI.js
+	cp ../submodules/webextensions-lib-configs/Configs.js $(EXTERNAL_LIB_DIR)/; echo 'export default Configs;' >> $(EXTERNAL_LIB_DIR)/Configs.js
+	cp ../submodules/webextensions-lib-options/Options.js $(EXTERNAL_LIB_DIR)/; echo 'export default Options;' >> $(EXTERNAL_LIB_DIR)/Options.js
+	cp ../submodules/webextensions-lib-l10n/l10n.js $(EXTERNAL_LIB_DIR)/; echo 'export default l10n;' >> $(EXTERNAL_LIB_DIR)/l10n.js
+	cp ../submodules/webextensions-lib-l10n/l10n.js $(EXTERNAL_LIB_DIR)/l10n-classic.js
+	cp ../submodules/webextensions-lib-shortcut-customize-ui/ShortcutCustomizeUI.js $(EXTERNAL_LIB_DIR)/; echo 'export default ShortcutCustomizeUI;' >> $(EXTERNAL_LIB_DIR)/ShortcutCustomizeUI.js
 
-../extlib/webextensions-lib-tab-id-fixer/TabIdFixer.js:
+../submodules/webextensions-lib-tab-id-fixer/TabIdFixer.js:
 	cd .. && git submodule update --init
 
-../extlib/webextensions-lib-tab-favicon-helper/TabFavIconHelper.js:
+../submodules/webextensions-lib-tab-favicon-helper/TabFavIconHelper.js:
 	cd .. && git submodule update --init
 
-../extlib/webextensions-lib-configs/Configs.js:
+../submodules/webextensions-lib-configs/Configs.js:
 	cd .. && git submodule update --init
 
-../extlib/webextensions-lib-options/Options.js:
+../submodules/webextensions-lib-options/Options.js:
 	cd .. && git submodule update --init
 
-../extlib/webextensions-lib-l10n/l10n.js:
+../submodules/webextensions-lib-l10n/l10n.js:
 	cd .. && git submodule update --init
 
-../extlib/webextensions-lib-rich-confirm/RichConfirm.js:
+../submodules/webextensions-lib-rich-confirm/RichConfirm.js:
 	cd .. && git submodule update --init
 
-../extlib/webextensions-lib-menu-ui/MenuUI.js:
+../submodules/webextensions-lib-menu-ui/MenuUI.js:
 	cd .. && git submodule update --init
 
-../extlib/webextensions-lib-shortcut-customize-ui/ShortcutCustomizeUI.js:
+../submodules/webextensions-lib-shortcut-customize-ui/ShortcutCustomizeUI.js:
 	cd .. && git submodule update --init
 
