Exclude dot files from the package

--- a/webextensions/Makefile
+++ b/webextensions/Makefile
@@ -18,7 +18,7 @@ format:
 
 xpi: install_extlib lint
 	rm -f ./*.xpi
-	zip -r -0 treestyletab-we.xpi manifest.json _locales common options background sidebar resources extlib >/dev/null 2>/dev/null
+	zip -r -0 treestyletab-we.xpi manifest.json _locales common options background sidebar resources extlib -x '*/.*' >/dev/null 2>/dev/null
 
 install_extlib:
 	cd .. && git submodule update --init
