Add "Focus Parent Tab" and "Focus First Child Tab" commands for keyboard shortcuts #1967

--- a/webextensions/manifest.json
+++ b/webextensions/manifest.json
@@ -145,6 +145,14 @@
     "focusNextSilently": {
       "description": "__MSG_command_focusNextSilently__"
     },
+    "focusParent": {
+      "suggested_key": { "default": "Ctrl+Shift+Left" },
+      "description": "__MSG_command_focusParent__"
+    },
+    "focusFirstChild": {
+      "suggested_key": { "default": "Ctrl+Shift+Right" },
+      "description": "__MSG_command_focusFirstChild__"
+    },
     "tabbarUp": {
       "suggested_key": { "default": "Alt+Shift+Up" },
       "description": "__MSG_command_tabbarUp__"
