Allow to install extlib without update

--- a/webextensions/Makefile
+++ b/webextensions/Makefile
@@ -16,12 +16,14 @@ lint:
 format:
 	$(NPM_BIN_DIR)/eslint . --ext=.js --report-unused-disable-directives --fix
 
-xpi: install_extlib lint
+xpi: update_extlib install_extlib lint
 	rm -f ./*.xpi
 	zip -r -0 treestyletab-we.xpi manifest.json _locales common options background sidebar resources extlib -x '*/.*' >/dev/null 2>/dev/null
 
-install_extlib:
+update_extlib:
 	cd .. && git submodule update --init
+
+install_extlib:
 	cp ../submodules/webextensions-lib-tab-id-fixer/TabIdFixer.js $(EXTERNAL_LIB_DIR)/; echo 'export default TabIdFixer;' >> $(EXTERNAL_LIB_DIR)/TabIdFixer.js
 	cp ../submodules/webextensions-lib-tab-favicon-helper/TabFavIconHelper.js $(EXTERNAL_LIB_DIR)/; echo 'export default TabFavIconHelper;' >> $(EXTERNAL_LIB_DIR)/TabFavIconHelper.js
 	cp ../submodules/webextensions-lib-rich-confirm/RichConfirm.js $(EXTERNAL_LIB_DIR)/; echo 'export default RichConfirm;' >> $(EXTERNAL_LIB_DIR)/RichConfirm.js
