--- a/webextensions/manifest.json
+++ b/webextensions/manifest.json
@@ -23,6 +23,7 @@
     "16": "resources/16x16.svg",
     "20": "resources/20x20.svg",
     "24": "resources/24x24.svg",
+    "32": "resources/32x32.svg",
     "64": "resources/icon64.png",
     "94": "resources/icon94.png"
   },
@@ -47,6 +48,11 @@
         "light": "resources/24x24-dark.svg#toolbar",
         "dark":  "resources/24x24-light.svg#toolbar",
         "size": 24
+      },
+      {
+        "light": "resources/32x32-dark.svg#toolbar",
+        "dark":  "resources/32x32-light.svg#toolbar",
+        "size": 32
       }
     ]
   },
@@ -55,7 +61,8 @@
     "default_icon": {
       "16": "resources/16x16-light.svg",
       "20": "resources/20x20-light.svg",
-      "24": "resources/24x24-light.svg"
+      "24": "resources/24x24-light.svg",
+      "32": "resources/32x32-light.svg"
     },
     "default_panel": "sidebar/sidebar.html",
     "browser_style": true
